# teggle-contract-research

./: .gitignore  Cargo.toml  GRANT.md  Makefile  NOTICE  README.md  find_floats_grep.txt  source
cortex/neo/: config.json  config.yaml  constants.rhai  main.rhai  sim.rhai
examples/: schema.rs
rhai/: sim.rhai
rocks.db/: IDENTITY  LOG  LOG.old.1651788581557583  MANIFEST-000015  OPTIONS-000018
schema/: handle_msg.json  query_msg.json
sled.db/: snap.00000000011AA244
src/: contract.rs  msg.rs  state.rs
wasm-sample-app/: Cargo.toml  Makefile  contract.wat
wasm-sample-app/src/: lib.rs
