[package]
name = "teggle-contract-research"
version = "0.1.0"
authors = ["David Radunz <david@vimtura.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1 # Cant do "s", but 1 might be closer than 0.
lto = "fat"

[profile.release]
opt-level = "s"
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = [
  "cosmwasm-std/backtraces",
  "omnibus-core/backtraces",
]
debug-print = [
  "cosmwasm-std/debug-print",
  "omnibus-core/debug-print",
]
test-print = [
  "omnibus-core/test-print"
]

[dependencies]
snafu = { version = "0.6.3" }
serde-json-wasm = { version = "0.2.1" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
bincode2 = "2.0.1"
schemars = "0.7"

# Testing
#chacha20poly1305 = { version = "0.9.0" }
base64 = "0.11.0"

[dependencies.ring]
#version = "0.17.0-alpha.11"
default-features = false
features = ["alloc", "wasm32_c", "no_wasm_exports"]
path = "../ring"

[dependencies.cosmwasm-std]
version = "0.10"
package = "teggle-cosmwasm-std"
features = ["rc-deps"]
path = "../teggle-omnibus/packages/cosmwasm/std"

[dependencies.cosmwasm-storage]
version = "0.10"
package = "teggle-cosmwasm-storage"
path = "../teggle-omnibus/packages/cosmwasm/storage"

[dependencies.omnibus-core]
version = "0.10"
package = "teggle-omnibus-core"
path = "../teggle-omnibus/packages/core"

[dev-dependencies]
cosmwasm-schema = "0.10.1"
