[package]
name = "wasm-sample-app"
version = "0.1.0"
authors = ["David Radunz <david@vimtura.com>"]
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-g', '-O']

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["wasm2-std/backtraces"]
debug-print = ["wasm2-std/debug-print"]

[dependencies]
snafu = { version = "0.6.3" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
wasm2-std = { version = "0.10.0", package = "teggle-wasm2-std", path = "../../teggle-wasm2/packages/std" }
bincode2 = "2.0.1"
